--- a/CMDID3Tagger/CMDID3Tagger.csproj
+++ b/CMDID3Tagger/CMDID3Tagger.csproj
@@ -78,7 +78,9 @@
     <Compile Include="ArgsParser.cs" />
     <Compile Include="Commands\CommandBase.cs" />
     <Compile Include="Commands\CommandFromFileName.cs" />
+    <Compile Include="Commands\CommandFromTags.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="FilePath.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tagger.cs" />
