--- a/Src/CMDID3Tagger/CMDID3Tagger.csproj
+++ b/Src/CMDID3Tagger/CMDID3Tagger.csproj
@@ -79,11 +79,11 @@
     <Compile Include="Commands\CommandBase.cs" />
     <Compile Include="Commands\CommandFromFileName.cs" />
     <Compile Include="Commands\CommandFromTags.cs" />
-    <Compile Include="Constants.cs" />
     <Compile Include="FilePath.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tagger.cs" />
+    <Compile Include="TagPropertyWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
