--- a/Src/CMDID3Tagger.Tests/CMDID3Tagger.Tests.csproj
+++ b/Src/CMDID3Tagger.Tests/CMDID3Tagger.Tests.csproj
@@ -40,6 +40,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MicroResolver, Version=2.3.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MicroResolver.2.3.5\lib\net46\MicroResolver.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.10.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.10.1\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
@@ -54,9 +57,9 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="Commands\CommandBaseTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TaggerTests.cs" />
+    <Compile Include="Sample.cs" />
+    <Compile Include="CommandFromTagsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
